apache/cloud-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloud-deployment
  namespace: apache-cloud
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cloud
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs/
          name: html-volume
      volumes:
      - name: html-volume
        hostPath:
          path: /html/cloud
          type: Directory
