apache/cloud-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cloud-service
  namespace: apache-cloud
spec:
    selector:
      app: cloud
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 80
